unpackaged/main/default/objects/Lead/fields/Completed_Step_Notes__c.field-meta.xml
<CustomField>
    <fullName>Completed_Step_Notes__c</fullName>
    <label>Completed Step Notes</label>
    <type>TextArea</type>
</CustomField>