unpackaged/main/default/objects/Lead/fields/Next_Step_Days_From_Now__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Days_From_Now__c</fullName>
    <formula>Next_Step_Date__c - DATEVALUE(NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Step Days From Now</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>